--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,3 +48,7 @@ bevy = { version = "0.11", default-features = false, features = [
 [[bench]]
 name = "replication"
 harness = false
+
+[[bench]]
+name = "large_replication"
+harness = false
